https://github.com/Emile-ness/Blog-preview-card-main.git

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <p class="html"><a href="">  HTML & CSS foundations</a></p>
 
-  <p class="language">These languages are the backbone of every<br> website, defining structure, content, and<br> presentation.</p>
+  <div class="language"><p>These languages are the backbone of every</p> <p> website, defining structure, content, and</p> <p>presentation.</p> </div>
 
   <div class="photo-avatar"><img src="assets/images/image-avatar.webp" alt="photo de Greg Hooper">   <p>Greg Hooper</p></div>
 
